@@ -51,6 +51,7 @@ Improvements
 * TINKERPOP-1376 Rename TinkerPop artifacts
 * TINKERPOP-1413 PropertiesTest#g_V_hasXageX_propertiesXnameX assumes that ids are longs
 * TINKERPOP-1416 Write Gremlin Server log files somewhere during doc generation
+* TINKERPOP-1418 CoreTraversalTests depend on missing functionality
 
 [[release-3-1-3]]
 TinkerPop 3.1.3 (Release Date: July 18, 2016)
